fixed error not showing buttongroup,fixed error not update section through arrows buttons

--- a/src/app/home/buttongroup/buttongroup.component.css
+++ b/src/app/home/buttongroup/buttongroup.component.css
@@ -12,3 +12,51 @@
 	top:100px;
 	z-index:300;
 }
+
+				/*** buttons, button-group **/
+
+.button_group{
+	color:#fff;
+	position:fixed;
+	z-index: 300;
+	top:35%;
+	left:4%;
+	padding: 0;
+	border: #A2A2A2 1px solid;
+
+	/*background:#ff7500*/
+	/*background: rgba(0,0,0,.9);*/
+
+	
+}
+.button_group:hover{	
+	border: #E3E3E3 1px solid;
+	/*background-color: rgba(0,0,0,.4);	*/
+}
+
+.button_group .btn{
+	/*background-color: transparent;*/
+	color: #A2A2A2;
+}
+.button_group .btn:hover{
+	/*outline: black 1px solid;*/
+	background-color: rgba(0,0,0,.2);
+	color: white;
+}
+
+		/* modificar el color de buttongroup de Angular Material */
+
+mat-button-toggle{
+	background-color: transparent;
+}
+mat-button-toggle:hover{
+	background-color: rgba(0,0,0,.3);
+	outline: #D2D2D2 1px solid;	
+}
+.mat-button-toggle-checked{
+	background-color: rgba(0,0,0,.3);
+	outline: #D2D2D2 1px solid;
+	/*necesario important*/
+	color: #E3E3E3 !important;
+	
+}
