--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -109,6 +109,7 @@
 
 				/*** buttons, button-group **/
 
+/*
 .button_group{
 	color:#fff;
 	position:fixed;
@@ -117,29 +118,21 @@
 	left:4%;
 	padding: 0;
 	border: #A2A2A2 1px solid;
-
-	/*background:#ff7500*/
-	/*background: rgba(0,0,0,.9);*/
-
-	
 }
 .button_group:hover{	
-	border: #E3E3E3 1px solid;
-	/*background-color: rgba(0,0,0,.4);	*/
+	border: #E3E3E3 1px solid;	
 }
 
-.button_group .btn{
-	/*background-color: transparent;*/
+.button_group .btn{	
 	color: #A2A2A2;
 }
 .button_group .btn:hover{
-	/*outline: black 1px solid;*/
 	background-color: rgba(0,0,0,.2);
 	color: white;
 }
-
+*/
 		/* modificar el color de buttongroup de Angular Material */
-
+/*
 mat-button-toggle{
 	background-color: transparent;
 }
@@ -150,11 +143,9 @@ mat-button-toggle:hover{
 .mat-button-toggle-checked{
 	background-color: rgba(0,0,0,.3);
 	outline: #D2D2D2 1px solid;
-	/*necesario important*/
 	color: #E3E3E3 !important;
-	
 }
-
+*/
 
 .btn_slider_section{
 	position: fixed;
